feat(testimonial section): Implement reponsive testimonial section - Added testimonial cards - Implmented swiper.js for testimonial cards animation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -179,50 +184,76 @@
             </div>
             <div class="services-grid">
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/infinity.svg" alt="">
+                <img src="assets/images/icons/services/infinity.svg" alt="" />
                 <h3>1. On-demand requests</h3>
-                <p>Put all your requests in the design queue in Trello, and we'll quickly knock them out 1 by 1, every time.</p>
-              </div>
-              <div class="services-grid-item">
-                <img src="assets/images/icons/services/flash.svg" alt="">
-                <h3>2. Top-notch quality</h3>
-                <p>High-end work from a dedicated team of senior designers that's always available when you need it.</p>
-              </div>
-              <div class="services-grid-item">
-                <img src="assets/images/icons/services/w.svg" alt="">
-                <h3>3. Powered by - Webflow</h3>
-                <p>We build every site on Webflow, making them dynamic, accessible, and easily scalable..
+                <p>
+                  Put all your requests in the design queue in Trello, and we'll
+                  quickly knock them out 1 by 1, every time.
                 </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/paint.svg" alt="">
+                <img src="assets/images/icons/services/flash.svg" alt="" />
+                <h3>2. Top-notch quality</h3>
+                <p>
+                  High-end work from a dedicated team of senior designers that's
+                  always available when you need it.
+                </p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/w.svg" alt="" />
+                <h3>3. Powered by - Webflow</h3>
+                <p>
+                  We build every site on Webflow, making them dynamic,
+                  accessible, and easily scalable..
+                </p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/paint.svg" alt="" />
                 <h3>4. Fast & Responsive</h3>
-                <p>Get regular updates on your projects and can expect to receive your designs within 2-3 days.</p>
+                <p>
+                  Get regular updates on your projects and can expect to receive
+                  your designs within 2-3 days.
+                </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/calendar.svg" alt="">
+                <img src="assets/images/icons/services/calendar.svg" alt="" />
                 <h3>5. No Lock in contracts</h3>
-                <p>Pay the same every month, no surprises. You can use it for as long as you want and cancel anytime.</p>
+                <p>
+                  Pay the same every month, no surprises. You can use it for as
+                  long as you want and cancel anytime.
+                </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/value.svg" alt="">
+                <img src="assets/images/icons/services/value.svg" alt="" />
                 <h3>6. Great value for money</h3>
-                <p>Get the power of dedicated design team at fraction of the cost of full-time employee.($54k/yr vs. $112k/yr).</p>
+                <p>
+                  Get the power of dedicated design team at fraction of the cost
+                  of full-time employee.($54k/yr vs. $112k/yr).
+                </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/setting.svg" alt="">
+                <img src="assets/images/icons/services/setting.svg" alt="" />
                 <h3>7. Customized for you</h3>
-                <p>We design and build custom for you. We're never starting from a template unless you want that?</p>
+                <p>
+                  We design and build custom for you. We're never starting from
+                  a template unless you want that?
+                </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/money.svg" alt="">
+                <img src="assets/images/icons/services/money.svg" alt="" />
                 <h3>8. Creative paying</h3>
-                <p>We're always here when you need us and never on payroll when you don't — flexible, dependable, & dedicated.</p>
+                <p>
+                  We're always here when you need us and never on payroll when
+                  you don't — flexible, dependable, & dedicated.
+                </p>
               </div>
               <div class="services-grid-item">
-                <img src="assets/images/icons/services/breifcase.svg" alt="">
+                <img src="assets/images/icons/services/breifcase.svg" alt="" />
                 <h3>9. Expert turnovers</h3>
-                <p>You're getting over 10+ years of top-tier design experience with every request — no hand-holding required.</p>
+                <p>
+                  You're getting over 10+ years of top-tier design experience
+                  with every request — no hand-holding required.
+                </p>
               </div>
             </div>
           </section>
@@ -296,6 +327,111 @@
                 alt=""
               />
             </section>
+          </section>
+          <section class="section flex-column" id="testimonial">
+            <div class="title">
+              <p>TESTIMONIAL</p>
+              <h1>Customer is Our Top Priority</h1>
+              <p>
+                We survey all of our clients, the results of which go directly
+                to our CEO.
+              </p>
+            </div>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="testimonial-card swiper-slide">
+                  <img src="assets/images/testimonial/test1.jpg" alt="" />
+                  <div class="card-content flex-column">
+                    <h3>
+                      Xavron is the best digital agency I have ever seen! Highly
+                      Recommended!
+                    </h3>
+                    <p>
+                      I recently hired <strong>Xavron</strong> for a custom web
+                      development project and couldn't be happier with the
+                      results. The team was able to bring my unique ideas to
+                      life and made it truly stand out.
+                    </p>
+                    <div class="author">
+                      <p>Diana Lozera</p>
+                      <p>Director of GYMSTORY</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-card swiper-slide">
+                  <img src="assets/images/testimonial/test2.jpg" alt="" />
+                  <div class="card-content flex-column">
+                    <h3>
+                      Absolutely seamless from concept to launch. Xavron
+                      exceeded every expectation!
+                    </h3>
+                    <p>
+                      Choosing <strong>Xavron</strong> was the best decision for
+                      our online presence. Their creative ideas and commitment
+                      to quality gave our brand a bold new look.
+                    </p>
+                    <div class="author">
+                      <p>Sara Reyes</p>
+                      <p>Marketing Lead, Layers</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-card swiper-slide">
+                  <img src="assets/images/testimonial/test3.jpg" alt="" />
+                  <div class="card-content flex-column">
+                    <h3>
+                      Xavron made the whole process effortless—and the results
+                      speak for themselves.
+                    </h3>
+                    <p>
+                      What I loved about <strong>Xavron</strong> was their
+                      approachability and professionalism. Our brand looks
+                      sharper and our customers are taking notice.
+                    </p>
+                    <div class="author">
+                      <p>Priya Anand</p>
+                      <p>Operations Manager, Neonix</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-card swiper-slide">
+                  <img src="assets/images/testimonial/test4.jpg" alt="" />
+                  <div class="card-content flex-column">
+                    <h3>
+                      Xavron transformed our digital workflow—truly a partner in
+                      growth.
+                    </h3>
+                    <p>
+                      Working with <strong>Xavron</strong> gave our business new
+                      momentum. From the first meeting, they were invested in
+                      our challenges and delivered a site that drives results.
+                    </p>
+                    <div class="author">
+                      <p>Ethan Lee</p>
+                      <p>CEO, Hourglass</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-card swiper-slide">
+                  <img src="assets/images/testimonial/test5.jpg" alt="" />
+                  <div class="card-content flex-column">
+                    <h3>
+                      Reliable, innovative, and genuinely caring about
+                      outcomes—Xavron is fantastic.
+                    </h3>
+                    <p>
+                      We turned to <strong>Xavron</strong> for a major UI
+                      overhaul. Our users noticed the difference immediately.
+                      Their team understands both aesthetics and performance.
+                    </p>
+                    <div class="author">
+                      <p>Alex Kim</p>
+                      <p>Head of Product, Quotient</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
