--- a/index.html
+++ b/index.html
@@ -433,6 +433,15 @@
               </div>
             </div>
           </section>
+          <section class="section flex-column" id="pricing">
+            <div class="title">
+              <p>CLEAR AND SIMPLE PRICING</p>
+              <h1>Simple pricing to level up your brand.</h1>
+              <p>
+                Senior experts. On-demand requests. Fast turnarounds. Flat monthly fee. Cancel anytime.
+              </p>
+            </div>
+          </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
