--- a/index.html
+++ b/index.html
@@ -441,6 +441,82 @@
                 Senior experts. On-demand requests. Fast turnarounds. Flat monthly fee. Cancel anytime.
               </p>
             </div>
+            <div class="pricing-card-container flex">
+              <div class="pricing-card card-side flex-column">
+                <div class="card-title flex">
+                  <p>Basic - Weekly</p>
+                </div>
+                <p class="card-description">Perfect if you want to try the subscription out or only have a few one-off tasks.
+                </p>
+                <div class="card-pricing">
+                  <p>$890/m</p>
+                  <p>Paid per week</p>
+                </div>
+                <div class="card-benefits">
+                  <p>Fixed scope of work</p>
+                  <p>2 rounds of revision</p>
+                  <p>Dedicated project manager</p>
+                  <p>Daily comms through slack</p>
+                  <p>1x designer</p>
+                  <p>2-5 days turn around time</p>
+                  <p>Top tier design</p>
+                </div>
+                <div class="card-btns flex-column">
+                  <button class="btn">Book A Call</button>
+                  <button class="btn">Click to buy</button>
+                </div>
+              </div>
+              <div class="pricing-card card-center flex-column">
+                <div class="card-title flex">
+                  <p>Standard</p>
+                  <p class="btn">Most Popular</p>
+                </div>
+                <p class="card-description">One request at a time. For companies who need on-going design support.
+                </p>
+                <div class="card-pricing">
+                  <p>$2,995/m</p>
+                  <p>Pause or cancel anytime</p>
+                </div>
+                <div class="card-benefits">
+                  <p>1x active task at a time</p>
+                  <p>Unlimited revisions</p>
+                  <p>Dedicated project manager</p>
+                  <p>Daily comms through slack</p>
+                  <p>Work with senior designers</p>
+                  <p>2-5 days turn around time</p>
+                  <p>Top tier design</p>
+                </div>
+                <div class="card-btns flex-column">
+                  <button class="btn">Book A Call</button>
+                  <button class="btn">Click to buy</button>
+                </div>
+              </div>
+              <div class="pricing-card card-side flex-column">
+                <div class="card-title flex">
+                  <p>Growth</p>
+                  <p class="btn">Best value</p>
+                </div>
+                <p class="card-description">Double the requests. For companies with increasing design needs. Limited spots.
+                </p>
+                <div class="card-pricing">
+                  <p>$4,795/m</p>
+                  <p>Pause or cancel anytime</p>
+                </div>
+                <div class="card-benefits">
+                  <p><strong style="color: #B9FD50;">2x active task</strong> at a time</p>
+                  <p>Unlimited revisions</p>
+                  <p>Dedicated project manager</p>
+                  <p>Daily comms through slack</p>
+                  <p>Work with senior designers</p>
+                  <p>2-5 days turn around time</p>
+                  <p>Top tier design</p>
+                </div>
+                <div class="card-btns flex-column">
+                  <button class="btn">Book A Call</button>
+                  <button class="btn">Click to buy</button>
+                </div>
+              </div>
+            </div>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
