--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
               <p>CLEAR AND SIMPLE PRICING</p>
               <h1>Simple pricing to level up your brand.</h1>
               <p>
-                Senior experts. On-demand requests. Fast turnarounds. Flat monthly fee. Cancel anytime.
+                Senior experts. On-demand requests. Fast turnarounds. Flat
+                monthly fee. Cancel anytime.
               </p>
             </div>
             <div class="pricing-card-container flex">
@@ -446,7 +447,9 @@
                 <div class="card-title flex">
                   <p>Basic - Weekly</p>
                 </div>
-                <p class="card-description">Perfect if you want to try the subscription out or only have a few one-off tasks.
+                <p class="card-description">
+                  Perfect if you want to try the subscription out or only have a
+                  few one-off tasks.
                 </p>
                 <div class="card-pricing">
                   <p>$890/m</p>
@@ -471,7 +474,9 @@
                   <p>Standard</p>
                   <p class="btn">Most Popular</p>
                 </div>
-                <p class="card-description">One request at a time. For companies who need on-going design support.
+                <p class="card-description">
+                  One request at a time. For companies who need on-going design
+                  support.
                 </p>
                 <div class="card-pricing">
                   <p>$2,995/m</p>
@@ -496,14 +501,19 @@
                   <p>Growth</p>
                   <p class="btn">Best value</p>
                 </div>
-                <p class="card-description">Double the requests. For companies with increasing design needs. Limited spots.
+                <p class="card-description">
+                  Double the requests. For companies with increasing design
+                  needs. Limited spots.
                 </p>
                 <div class="card-pricing">
                   <p>$4,795/m</p>
                   <p>Pause or cancel anytime</p>
                 </div>
                 <div class="card-benefits">
-                  <p><strong style="color: #B9FD50;">2x active task</strong> at a time</p>
+                  <p>
+                    <strong style="color: #b9fd50">2x active task</strong> at a
+                    time
+                  </p>
                   <p>Unlimited revisions</p>
                   <p>Dedicated project manager</p>
                   <p>Daily comms through slack</p>
@@ -514,6 +524,100 @@
                 <div class="card-btns flex-column">
                   <button class="btn">Book A Call</button>
                   <button class="btn">Click to buy</button>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="section flex-column" id="blogs">
+            <div class="title">
+              <p>BLOGS</p>
+              <h1>News & Articles</h1>
+              <p>Best Articles to get started</p>
+            </div>
+            <div class="blogs-content flex">
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog1.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">Branding</span>
+                  <h3 class="blog-card__title">
+                    What is the branding,<br />
+                    and why we need it?
+                  </h3>
+                  <p class="blog-card__desc">
+                    On the other hand, we denounce with righteous indignation and...
+                  </p>
+                </div>
+              </div>
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog2.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">Design</span>
+                  <h3 class="blog-card__title">
+                    What makes great design timeless?
+                  </h3>
+                  <p class="blog-card__desc">
+                    Great design blends functionality and beauty to create lasting impressions. Discover how...
+                  </p>
+                </div>
+              </div>
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog3.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">Marketing</span>
+                  <h3 class="blog-card__title">
+                    How to craft compelling messages?
+                  </h3>
+                  <p class="blog-card__desc">
+                    Effective marketing speaks directly to your audience's needs and...
+                  </p>
+                </div>
+              </div>
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog4.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">UX/UI</span>
+                  <h3 class="blog-card__title">
+                    Why does user experience matter so much?
+                  </h3>
+                  <p class="blog-card__desc">
+                    A seamless, intuitive UI keeps users engaged and delighted. Explore tips to...
+                  </p>
+                </div>
+              </div>
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog5.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">Brand Strategy</span>
+                  <h3 class="blog-card__title">
+                    What sets your brand apart?
+                  </h3>
+                  <p class="blog-card__desc">
+                    Successful brands define their mission and voice clearly. Build loyalty and...
+                  </p>
+                </div>
+              </div>
+              <div class="blog-card flex">
+                <div class="blog-card__img flex">
+                  <img src="assets/images/blog/blog6.jpg" alt="Blog post image" />
+                </div>
+                <div class="blog-card__content flex-column">
+                  <span class="blog-card__tag">Social Media</span>
+                  <h3 class="blog-card__title">
+                    Maximizing your social impact
+                  </h3>
+                  <p class="blog-card__desc">
+                    Social platforms provide a powerful stage for authentic storytelling. Learn ways to...
+                  </p>
                 </div>
               </div>
             </div>
