--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@
                 </div>
               </div>
             </div>
+            <button class="btn load-more">LOAD MORE</button>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
