feat(faqs section): Implement responsive faqs section

--- a/index.html
+++ b/index.html
@@ -537,7 +537,10 @@
             <div class="blogs-content flex">
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog1.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog1.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">Branding</span>
@@ -546,13 +549,17 @@
                     and why we need it?
                   </h3>
                   <p class="blog-card__desc">
-                    On the other hand, we denounce with righteous indignation and...
+                    On the other hand, we denounce with righteous indignation
+                    and...
                   </p>
                 </div>
               </div>
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog2.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog2.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">Design</span>
@@ -560,13 +567,17 @@
                     What makes great design timeless?
                   </h3>
                   <p class="blog-card__desc">
-                    Great design blends functionality and beauty to create lasting impressions. Discover how...
+                    Great design blends functionality and beauty to create
+                    lasting impressions. Discover how...
                   </p>
                 </div>
               </div>
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog3.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog3.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">Marketing</span>
@@ -574,13 +585,17 @@
                     How to craft compelling messages?
                   </h3>
                   <p class="blog-card__desc">
-                    Effective marketing speaks directly to your audience's needs and...
+                    Effective marketing speaks directly to your audience's needs
+                    and...
                   </p>
                 </div>
               </div>
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog4.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog4.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">UX/UI</span>
@@ -588,27 +603,33 @@
                     Why does user experience matter so much?
                   </h3>
                   <p class="blog-card__desc">
-                    A seamless, intuitive UI keeps users engaged and delighted. Explore tips to...
+                    A seamless, intuitive UI keeps users engaged and delighted.
+                    Explore tips to...
                   </p>
                 </div>
               </div>
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog5.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog5.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">Brand Strategy</span>
-                  <h3 class="blog-card__title">
-                    What sets your brand apart?
-                  </h3>
+                  <h3 class="blog-card__title">What sets your brand apart?</h3>
                   <p class="blog-card__desc">
-                    Successful brands define their mission and voice clearly. Build loyalty and...
+                    Successful brands define their mission and voice clearly.
+                    Build loyalty and...
                   </p>
                 </div>
               </div>
               <div class="blog-card flex">
                 <div class="blog-card__img flex">
-                  <img src="assets/images/blog/blog6.jpg" alt="Blog post image" />
+                  <img
+                    src="assets/images/blog/blog6.jpg"
+                    alt="Blog post image"
+                  />
                 </div>
                 <div class="blog-card__content flex-column">
                   <span class="blog-card__tag">Social Media</span>
@@ -616,12 +637,120 @@
                     Maximizing your social impact
                   </h3>
                   <p class="blog-card__desc">
-                    Social platforms provide a powerful stage for authentic storytelling. Learn ways to...
+                    Social platforms provide a powerful stage for authentic
+                    storytelling. Learn ways to...
                   </p>
                 </div>
               </div>
             </div>
             <button class="btn load-more">LOAD MORE</button>
+          </section>
+          <section class="section flex-column" id="faq">
+            <div class="title">
+              <h1>FAQ's</h1>
+              <p>Providing answers to your questions</p>
+            </div>
+            <div class="faq-content flex-column">
+              <div class="accordion flex-column">
+                <div class="accordion-item">
+                  <button
+                    id="accordion-button-1"
+                    class="flex"
+                    aria-expanded="false"
+                  >
+                    <p class="accordion-title">
+                      What services does your agency offer?
+                    </p>
+                    <img
+                      src="assets/images/icons/faq/arrowDown.svg"
+                      alt=""
+                      class="icon"
+                    />
+                  </button>
+                  <div class="accordion-content">
+                    <p>
+                      We provide custom web development, UI/UX design, branding,
+                      digital marketing, and ongoing support to help your
+                      business grow.
+                    </p>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <button
+                    id="accordion-button-1"
+                    class="flex"
+                    aria-expanded="false"
+                  >
+                    <p class="accordion-title">
+                      How long does a typical project take?
+                    </p>
+                    <img
+                      src="assets/images/icons/faq/arrowDown.svg"
+                      alt=""
+                      class="icon"
+                    />
+                  </button>
+                  <div class="accordion-content">
+                    <p>
+                      Project timelines vary by scope but generally range from 4
+                      to 12 weeks, depending on complexity and requirements.
+                    </p>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <button
+                    id="accordion-button-1"
+                    class="flex"
+                    aria-expanded="false"
+                  >
+                    <p class="accordion-title">
+                      Can I pause or cancel my subscription anytime?
+                    </p>
+                    <img
+                      src="assets/images/icons/faq/arrowDown.svg"
+                      alt=""
+                      class="icon"
+                    />
+                  </button>
+                  <div class="accordion-content">
+                    <p>
+                      Yes, all our subscription plans offer flexibility—you can
+                      pause or cancel anytime without penalties.
+                    </p>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <button
+                    id="accordion-button-1"
+                    class="flex"
+                    aria-expanded="false"
+                  >
+                    <p class="accordion-title">
+                      Do you offer dedicated project managers?
+                    </p>
+                    <img
+                      src="assets/images/icons/faq/arrowDown.svg"
+                      alt=""
+                      class="icon"
+                    />
+                  </button>
+                  <div class="accordion-content">
+                    <p>
+                      Absolutely. Every project is managed by an experienced
+                      project manager who serves as your primary point of
+                      contact.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <form action="#" id="myform">
+                <textarea name="message" id="textarea" required></textarea>
+                <div class="flex">
+                  <p>We will answer your questions via email within 48 hours.</p>
+                  <button class="btn" type="submit">Send</button>
+                </div>
+              </form>
+            </div>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
