--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#process">Process</a>
                 <a href="#services">Services</a>
                 <a href="#portfolio">Portfolio</a>
-                <a href="#benefits">Pricing</a>
+                <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
               </div>
               <a href="#" class="get-started">
@@ -760,6 +760,59 @@
             </div>
           </section>
         </main>
+        <footer class="flex-column">
+          <div class="cta flex-column">
+            <h1>Become part of the design revolution</h1>
+            <p>Jump on a membership and start 
+              requesting designs right away!</p>
+              <button class="btn">See Pricing</button>
+              <div class="glow"></div>
+          </div>
+          <div class="footer-content flex-column">
+            <div class="footer-info  flex">
+              <div class="footer-left flex-column">
+                <p class="logo">Xev<span>ron</span></p>
+                <p>Xevron - the leading digital agency based in <br>
+                   the XYZ, working with top-tier clients, from <br>
+                   start-ups to enterprises.
+                </p>
+              </div>
+              <div class="footer-right flex-column">
+                <div class="contact flex">
+                  <img src="assets/images/icons/footer/email.svg" alt="">
+                  <p>info@xevron.com</p>
+                </div>
+                <div class="contact flex">
+                  <img src="assets/images/icons/footer/phone.svg" alt="">
+                  <p>(001) 1231 3435</p>
+                </div>
+                <div class="contact flex">
+                  <figure>
+                  <img src="assets/images/icons/footer/linkdin.svg" alt="">
+                </figure>
+                <figure>
+                  <img src="assets/images/icons/footer/dribble.svg" alt="">
+                </figure>
+                <figure>
+                  <img src="assets/images/icons/footer/instagram.svg" alt="">
+                </figure>
+                <figure>
+                  <img src="assets/images/icons/footer/x.svg" alt="">
+                </figure>
+                </div>
+              </div>
+            </div>
+            <div class="footer-nav flex">
+            <div class="nav-links flex">
+                <a href="#process">Process</a>
+                <a href="#services">Services</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#pricing">Pricing</a>
+                <a href="#faq">FAQ</a>
+            </div>
+            <p>© 2025 AqeelSheikh - All Rights Reserved</p>
+          </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
