--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -340,7 +339,7 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="testimonial-card swiper-slide">
-                  <img src="assets/images/testimonial/test1.jpg" alt="" />
+                  <img src="assets/images/testimonial/test1.avif" alt="" />
                   <div class="card-content flex-column">
                     <h3>
                       Xavron is the best digital agency I have ever seen! Highly
@@ -353,13 +352,13 @@
                       life and made it truly stand out.
                     </p>
                     <div class="author">
-                      <p>Diana Lozera</p>
-                      <p>Director of GYMSTORY</p>
+                      <p>Thomas Shelby</p>
+                      <p>CEO, Shelby Companies</p>
                     </div>
                   </div>
                 </div>
                 <div class="testimonial-card swiper-slide">
-                  <img src="assets/images/testimonial/test2.jpg" alt="" />
+                  <img src="assets/images/testimonial/test2.avif" alt="" />
                   <div class="card-content flex-column">
                     <h3>
                       Absolutely seamless from concept to launch. Xavron
@@ -377,7 +376,7 @@
                   </div>
                 </div>
                 <div class="testimonial-card swiper-slide">
-                  <img src="assets/images/testimonial/test3.jpg" alt="" />
+                  <img src="assets/images/testimonial/test3.avif" alt="" />
                   <div class="card-content flex-column">
                     <h3>
                       Xavron made the whole process effortless—and the results
@@ -395,7 +394,7 @@
                   </div>
                 </div>
                 <div class="testimonial-card swiper-slide">
-                  <img src="assets/images/testimonial/test4.jpg" alt="" />
+                  <img src="assets/images/testimonial/test4.avif" alt="" />
                   <div class="card-content flex-column">
                     <h3>
                       Xavron transformed our digital workflow—truly a partner in
@@ -413,7 +412,7 @@
                   </div>
                 </div>
                 <div class="testimonial-card swiper-slide">
-                  <img src="assets/images/testimonial/test5.jpg" alt="" />
+                  <img src="assets/images/testimonial/test5.avif" alt="" />
                   <div class="card-content flex-column">
                     <h3>
                       Reliable, innovative, and genuinely caring about
@@ -744,18 +743,18 @@
                 </div>
               </div>
               <form action="#" id="myform" class="flex-column">
-              <label for="textarea">
-                Your Message
-                <textarea name="message" id="textarea" required></textarea>
-              </label>
-              <div class="flex">
-                <label for="email">
-                  Your Email <br> 
-                  <input type="email" name="email" id="email" required>
+                <label for="textarea">
+                  Your Message
+                  <textarea name="message" id="textarea" required></textarea>
                 </label>
-                <button class="btn" type="submit">Send</button>
-              </div>
-              <p>We will answer your questions via email within 48 hours.</p>
+                <div class="flex">
+                  <label for="email">
+                    Your Email <br />
+                    <input type="email" name="email" id="email" required />
+                  </label>
+                  <button class="btn" type="submit">Send</button>
+                </div>
+                <p>We will answer your questions via email within 48 hours.</p>
               </form>
             </div>
           </section>
@@ -763,56 +762,61 @@
         <footer class="flex-column">
           <div class="cta flex-column">
             <h1>Become part of the design revolution</h1>
-            <p>Jump on a membership and start 
-              requesting designs right away!</p>
-              <button class="btn">See Pricing</button>
-              <div class="glow"></div>
+            <p>Jump on a membership and start requesting designs right away!</p>
+            <button class="btn">See Pricing</button>
+            <div class="glow"></div>
           </div>
           <div class="footer-content flex-column">
-            <div class="footer-info  flex">
+            <div class="footer-info flex">
               <div class="footer-left flex-column">
                 <p class="logo">Xev<span>ron</span></p>
-                <p>Xevron - the leading digital agency based in <br>
-                   the XYZ, working with top-tier clients, from <br>
-                   start-ups to enterprises.
+                <p>
+                  Xevron - the leading digital agency based in <br />
+                  the XYZ, working with top-tier clients, from <br />
+                  start-ups to enterprises.
                 </p>
               </div>
               <div class="footer-right flex-column">
                 <div class="contact flex">
-                  <img src="assets/images/icons/footer/email.svg" alt="">
+                  <img src="assets/images/icons/footer/email.svg" alt="" />
                   <p>info@xevron.com</p>
                 </div>
                 <div class="contact flex">
-                  <img src="assets/images/icons/footer/phone.svg" alt="">
+                  <img src="assets/images/icons/footer/phone.svg" alt="" />
                   <p>(001) 1231 3435</p>
                 </div>
                 <div class="contact flex">
                   <figure>
-                  <img src="assets/images/icons/footer/linkdin.svg" alt="">
-                </figure>
-                <figure>
-                  <img src="assets/images/icons/footer/dribble.svg" alt="">
-                </figure>
-                <figure>
-                  <img src="assets/images/icons/footer/instagram.svg" alt="">
-                </figure>
-                <figure>
-                  <img src="assets/images/icons/footer/x.svg" alt="">
-                </figure>
+                    <img src="assets/images/icons/footer/linkdin.svg" alt="" />
+                  </figure>
+                  <figure>
+                    <img src="assets/images/icons/footer/dribble.svg" alt="" />
+                  </figure>
+                  <figure>
+                    <img
+                      src="assets/images/icons/footer/instagram.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <figure>
+                    <img src="assets/images/icons/footer/x.svg" alt="" />
+                  </figure>
                 </div>
               </div>
             </div>
             <div class="footer-nav flex">
-            <div class="nav-links flex">
+              <div class="nav-links flex">
                 <a href="#process">Process</a>
                 <a href="#services">Services</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
+              </div>
+              <p>© 2025 AqeelSheikh - All Rights Reserved</p>
             </div>
-            <p>© 2025 AqeelSheikh - All Rights Reserved</p>
           </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
