--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
               </div>
-              <a href="#" class="get-started">
+              <a href="#pricing" class="get-started">
                 <button class="btn">Get Started</button>
               </a>
             </div>
@@ -51,7 +51,7 @@
             We increase revenue and ensure sustainable long-term growth <br />
             for your business through powerful Webflow websites.
           </p>
-          <a href="#">
+          <a href="#footer">
             <button class="btn">Book A Meeting</button>
           </a>
           <div class="glow"></div>
@@ -759,11 +759,13 @@
             </div>
           </section>
         </main>
-        <footer class="flex-column">
+        <footer class="flex-column" id="footer">
           <div class="cta flex-column">
             <h1>Become part of the design revolution</h1>
             <p>Jump on a membership and start requesting designs right away!</p>
-            <button class="btn">See Pricing</button>
+            <a href="#pricing">
+              <button class="btn">See Pricing</button>
+            </a>
             <div class="glow"></div>
           </div>
           <div class="footer-content flex-column">
@@ -772,7 +774,7 @@
                 <p class="logo">Xev<span>ron</span></p>
                 <p>
                   Xevron - the leading digital agency based in <br />
-                  the XYZ, working with top-tier clients, from <br />
+                  XYZ, working with top-tier clients, from <br />
                   start-ups to enterprises.
                 </p>
               </div>
@@ -818,6 +820,7 @@
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollToPlugin.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
         <script src="assets/js/script.js"></script>
