feat(buttons): Enhance button styles and interactions - Updated button classes to include 'filled-btn' for improved visual appeal - Added hover and active effects for buttons to enhance user experience - Modified 'LOAD MORE' button for better interaction feedback

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#faq">FAQ</a>
               </div>
               <a href="#pricing" class="get-started">
-                <button class="btn">Get Started</button>
+                <button class="btn filled-btn">Get Started</button>
               </a>
             </div>
           </nav>
@@ -51,8 +51,8 @@
             We increase revenue and ensure sustainable long-term growth <br />
             for your business through powerful Webflow websites.
           </p>
-          <a href="#footer">
-            <button class="btn">Book A Meeting</button>
+          <a href="#pricing">
+            <button class="btn filled-btn">Book A Meeting</button>
           </a>
           <div class="glow"></div>
           <div class="star1 star"></div>
@@ -99,7 +99,7 @@
                     requests as you need - no limits.
                   </p>
                   <a href="#pricing">
-                    <button class="btn">See Pricing</button>
+                    <button class="btn filled-btn">See Pricing</button>
                   </a>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                   brand to new levels.
                 </p>
                 <a href="#pricing">
-                  <button class="btn">See Pricing</button>
+                  <button class="btn filled-btn">See Pricing</button>
                 </a>
               </div>
             </div>
@@ -465,7 +465,7 @@
                 </div>
                 <div class="card-btns flex-column">
                   <button class="btn">Book A Call</button>
-                  <button class="btn">Click to buy</button>
+                  <button class="btn filled-btn">Click to buy</button>
                 </div>
               </div>
               <div class="pricing-card card-center flex-column">
@@ -492,7 +492,7 @@
                 </div>
                 <div class="card-btns flex-column">
                   <button class="btn">Book A Call</button>
-                  <button class="btn">Click to buy</button>
+                  <button class="btn filled-btn">Click to buy</button>
                 </div>
               </div>
               <div class="pricing-card card-side flex-column">
@@ -522,7 +522,7 @@
                 </div>
                 <div class="card-btns flex-column">
                   <button class="btn">Book A Call</button>
-                  <button class="btn">Click to buy</button>
+                  <button class="btn filled-btn">Click to buy</button>
                 </div>
               </div>
             </div>
@@ -642,7 +642,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn load-more">LOAD MORE</button>
+            <button class="btn load-more-btn"><span>LOAD MORE</span></button>
           </section>
           <section class="section flex-column" id="faq">
             <div class="title">
@@ -752,7 +752,7 @@
                     Your Email <br />
                     <input type="email" name="email" id="email" required />
                   </label>
-                  <button class="btn" type="submit">Send</button>
+                  <button class="btn filled-btn" type="submit">Send</button>
                 </div>
                 <p>We will answer your questions via email within 48 hours.</p>
               </form>
@@ -764,7 +764,7 @@
             <h1>Become part of the design revolution</h1>
             <p>Jump on a membership and start requesting designs right away!</p>
             <a href="#pricing">
-              <button class="btn">See Pricing</button>
+              <button class="btn filled-btn">See Pricing</button>
             </a>
             <div class="glow"></div>
           </div>
