--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
               </div>
-              <p>© 2025 AqeelSheikh - All Rights Reserved</p>
+              <p>© 2025 <a href="https://aqeelsheikh.netlify.app/" style="text-decoration: none; color: #fff;">AqeelSheikh</a> - All Rights Reserved</p>
             </div>
           </div>
         </footer>
