--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Xevron | Digital Agency & Creative Web Solutions</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Grow your brand with Xevron, a digital agency specializing in web design, development, and marketing strategies that help businesses stand out online."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Xevron | Digital Agency & Creative Web Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Expert web design, development, and digital marketing to accelerate your brand’s growth."
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:title"
+      content="Xevron | Digital Agency & Creative Web Solutions"
+    />
+    <meta
+      name="twitter:description"
+      content="Creative design, expert development, and proven marketing services for business growth."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
@@ -10,7 +34,6 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-    <title>Xevron</title>
   </head>
   <body>
     <div id="wrapper">
@@ -866,7 +889,15 @@
                 <a href="#pricing">Pricing</a>
                 <a href="#faq">FAQ</a>
               </div>
-              <p>© 2025 <a href="https://aqeelsheikh.netlify.app/" style="text-decoration: none; color: #fff;">AqeelSheikh</a> - All Rights Reserved</p>
+              <p>
+                © 2025
+                <a
+                  href="https://aqeelsheikh.netlify.app/"
+                  style="text-decoration: none; color: #fff"
+                  >AqeelSheikh</a
+                >
+                - All Rights Reserved
+              </p>
             </div>
           </div>
         </footer>
